test/compile-fail/scope/use-no-name-root-path/expected.txt
error: unresolved import `c`
 --> top.rhdl:4:14
  |
4 |         use ::c;
  |               ^ no `c` crate in root
